--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -564,7 +564,7 @@ h2.payoff
 
 
 .delete .ui-button-text, .cancel .ui-button-text{color:#fff;text-align:left;margin:0px 0 0 10px !important}
-.delete .btn, .cancel .btn {height:35px !important;font-size: 1.1em;}
+.delete .btn, .cancel .btn {height:35px !important;font-size: 1.1em;width:65px!important;}
 .cancel button{background: url(../img/delete.png) center center no-repeat !important;border:0 !important;text-indent:-999999px}
 
 .delete button{background: url(../img/sprite.png) 12px -1074px no-repeat !important;padding:0 0 20px 0 !important;border:0 !important;text-indent:-999999px;}
